--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,57 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/post_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="0dp"
-    android:paddingTop="0dp"
-    android:paddingRight="0dp"
-    android:paddingBottom="0dp"
-    tools:context=".ui.posts.PostFragment">
+    android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/image_container"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/post_container"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintTop_toTopOf="@id/post_container">
-
-        <com.android.volley.toolbox.NetworkImageView
-            android:id="@+id/create_post_network_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/image_preview"
-            android:scaleType="centerInside"
-            android:src="@android:drawable/ic_menu_gallery" />
-
-        <ImageView
-            android:id="@+id/create_post_local_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/image_preview"
-            android:scaleType="centerInside"
-            android:src="@android:drawable/ic_menu_gallery" />
-
-    </FrameLayout>
-
-    <EditText
-        android:id="@+id/create_post_caption"
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:autofillHints="post_text"
-        android:hint="@string/edit_text_hint"
-        android:inputType="textMultiLine"
-        android:scrollbars="vertical"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_container" />
+        tools:context=".ui.posts.PostFragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <FrameLayout
+                android:id="@+id/image_container"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintDimensionRatio="3:2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.android.volley.toolbox.NetworkImageView
+                    android:id="@+id/create_post_network_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_preview"
+                    android:scaleType="centerCrop" />
+
+                <ImageView
+                    android:id="@+id/create_post_local_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingTop="8dp"
+                    android:contentDescription="@string/image_preview"
+                    android:scaleType="centerCrop" />
+
+            </FrameLayout>
+
+            <EditText
+                android:id="@+id/create_post_caption"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:autofillHints="post_text"
+                android:hint="@string/edit_text_hint"
+                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/image_container" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
