--- a/app/src/main/res/layout-land/fragment_post.xml
+++ b/app/src/main/res/layout-land/fragment_post.xml
@@ -53,6 +53,7 @@
                 android:autofillHints="post_text"
                 android:hint="@string/edit_text_hint"
                 android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
+                android:maxLength="@integer/maximum_post_length"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/image_container" />
