--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -48,10 +48,8 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
                 android:hint="@string/edit_text_hint"
+                android:padding="8dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="@integer/maximum_post_length"
                 app:layout_constraintEnd_toEndOf="parent"
